name:                netwire-vinyl
version:             0.1.0.0
synopsis:            Testing how to implement shaders and rendering through vinyl-gl in a Netwire framework.
description:         Testing how to implement shaders and rendering through vinyl-gl in a Netwire framework.
homepage:            http://github.com/crockeo/netwire-vinyl
license:             MIT
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           (c) 2014, Cerek Hillen
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable netwire-vinyl
  ghc-options:         -Wall -fno-warn-unused-do-bind

  main-is:             Main.hs

  build-depends:       base     == 4.7.*
               ,       netwire  == 5.0.0
               ,       GLFW     == 0.5.2.2
               ,       GLUtil   == 0.8.1
               ,       vinyl-gl == 0.2.1
               ,       vinyl    == 0.4.3
               ,       OpenGL

  hs-source-dirs:      src/

  default-language:    Haskell2010
